assets/css/app.css
/* open sans font */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');

/* default css */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    width: 100%;
    height: 100%;
    font-family: 'Open Sans', sans-serif;
    font-size: 14px;
}

svg {
    width: 14px;
}

a {
    text-decoration: none;
    color: inherit;
}

p {
    margin-bottom: 0;
}

.mb-100 {
    margin-bottom: 100px;
}

ol,
ul {
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
}

.border-bottom {
    border-bottom: 1px solid #a0959548 !important;
}

.transition {
    transition: .3s all ease-in-out;
}

.bg-red {
    background-color: #ff0000 !important;
}

.text-red {
    color: #ff0000 !important;
}

.fs-14 {
    font-size: 14px;
}

.fs-15 {
    font-size: 15px;
}

.fs-16 {
    font-size: 16px;
}

.fs-18 {
    font-size: 18px;
}

.fs-20 {
    font-size: 20px;
}

/* section area css */
.section-title .btn {
    border: 2px solid #ff0000;
}

/* header area css */
.header-top-area {
    background-color: #f5f5f5;
}

.header-top-area a {
    padding: 0 10px;
}

.header-top-area a:last-child {
    padding-right: 0;
}

.header-middle-area svg,
.header-bottom-area .actions svg {
    width: 25px;
}

.header-middle-area .form-control,
.header-middle-area .form-control:focus {
    border: 2px solid #ff0000;
    border-color: #ff0000 !important;
}

.header-middle-area .search button {
    height: 100%;
    width: 50px;
}

.header-bottom-area .menu li a:first-child {
    padding-left: 0 !important;
}

.header-bottom-area .actions a:last-child {
    padding-right: 0;
}

/* product item css */
.product-item:hover .product-action {
    opacity: 1 !important;
}

.product-item .product-image img {
    max-width: 70%;
}

.product-item .product-image .product-badge {
    width: 40px;
    height: 40px;
    padding: 6px 10px;
    line-height: 13px;
}

/* footer area css */
.footer-area {
    background-color: #f5f5f5;
}

.footer-area .footer-info .footer-info-social svg {
    width: 30px;
}

.footer-area .footer-menu h4 {
    margin-bottom: 30px;
}

.footer-area .footer-copyrights {
    background-color: #e7e7e7;
}

/* product details area css */
.product-details-area {
    padding: 22px 0 10px 0;
    background-color: #f5f5f5;
}

.product-details-area .product-title {
    font-size: 18px;
}

.product-details-area .product-price {
    line-height: 22px;
}

.product-details-area .product-price span {
    font-size: 20px;
}

.product-details-area .nav-pills li {
    margin-right: 40px;
    transition: .3s all ease-in-out;
    position: relative;
}

.product-details-area .nav-pills li:hover {
    color: blueviolet;
}

.product-details-area .nav-pills .pill-active {
    font-weight: 600;
}

.product-details-area .nav-pills .pill-active::before {
    width: 100%;
    height: 2px;
    background: #000000;
    position: absolute;
    bottom: -10px;
    left: 0;
    content: "";
}

.product-overview .product-total > div {
    margin-right: 15px;
}

.product-overview .product-price {
    font-size: 30px;
}

